tests/reference/asr-unsigned_01-892b178.stderr
semantic error: Cannot cast negative value to unsigned integer 
 --> tests/errors/unsigned_01.py:3:10
  |
3 | i: u16 = u16(-5)
  |          ^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
